# proyecto-de-grado

./: .dockerignore  .gitignore  .pre-commit-config.yaml  PR_13_CAN_WE_MERGE.md  PR_13_REVIEW.md  README.md  README_EN.md  README_ES.md  dvc.yaml  main.py  pyproject.toml
.dvc/: config
.github/workflows/: pre-merge.yaml  pre-merge.yml
.hydra/: config.yaml
.streamlit/: config.toml
animaloc_improved/eval/: stitchers.py
animaloc_improved/tools/: add_info_to_model.py  common.py  count_metrics_v2.py  csv_tool.py  data_exploration.py  describe_model.py  infer_metrics.py  infer_v2.py  latex_utils.py  massage_results.py  measure_crowdedness_by_img.py  mine_hard_negs.py  patcher_v2.py  results_to_excel.py  test_v2.py
api/: Dockerfile  animaloc_utils.py  config.py  detector.py  internal_types.py  main.py  model_utils.py  pyproject.cpu.toml  req_resp_types.py  routes.py  run_api.py  s3_utils.py  torch_utils.py
api/schemas/: internal_types.py  req_resp_types.py  shared_types.py
api/utils/: animaloc_utils.py  model_utils.py
configs/: config.yaml
configs/add_info/: default.yaml
configs/test/: faster_rcnn.yaml  herdnet.yaml
configs/train/: faster_rcnn_herdnet_trainer.yaml  faster_rcnn_herdnet_trainer_tiny.yaml  mock.yaml
dashboard/: Dockerfile  app.py  streamlit_app.py
dashboard/pages/: 0_Home.py  1_Upload_Images.py  2_Detection_Viewer.py  2_View_Detections.py  3_Metrics_Viewer.py  3_Métricas_de_Rendimiento.py  3_Overfly_Counts.py
dashboard/utils/: api_client.py  local_detector.py  mock_data.py  s3_utils.py  visualization.py
data/: .dvcignore  .gitignore  groundtruth.dvc  idx_2_species.json  models.dvc  patches_512.dvc  test.dvc  train.dvc  train_subframes.dvc  val.dvc
data-exploration/: main.py  utils.py  validate_multiclass_images.py
data-exploration/result/: exploracion_datos.md
data/gt-preprocessed/: .gitignore  coco.dvc
data/gt-preprocessed/coco/: .gitignore
data/gt-preprocessed/csv/: .gitignore
data/model_descs/: .gitignore
data/models/: .gitignore
data/models/faster-rcnn/: .gitignore
data/models/tmp/: .gitignore  faster-rcnn-resnet50-25epochs.pth.dvc
data/patches-1024-ol-160-m01/: .gitignore
data/patches-1024-ol-320-m01/: .gitignore
data/patches-512-ol-160-m0.3/: .gitignore
data/patches-512-ol-160-m0.3/train-tiny/: .gitignore
data/patches-512-ol-160-m0.3/val-tiny/: .gitignore
data/patches-512-ol-160-m01/: .gitignore
data/patches-512-ol-160-m01-fpwa-0.1/: .gitignore
data/patches-512-ol-160-m01-w-hard-negs/: .gitignore
data/test_results/: .gitignore
data/test_results/herdnet_v2_fi_repl/: confusion_matrix.csv  detections.csv  metrics_results.csv
data/test_results/herdnet_v2_full_imgs/: confusion_matrix.csv  detections.csv  metrics_results.csv
data/test_results_v2/herdnet_v2_hn2/: .gitignore
data_exploration/: main.py  utils.py
datos/: README.md
docs/: README_EN.md  notes-feedback-reporte-inicial.md
docs/notes-on-papers/: Delplanque-et-al-2023-From-crowd-to-herd-counting--Mateo.md
herdnet/config/: herdnet_config.yaml
herdnet/data/: dataset.py  transforms.py
herdnet/engine/: evaluator.py  focal_loss.py  trainer.py
herdnet/model/: dla.py  herdnet.py
herdnet/scripts/: overfit_first_multiclass_image.py  patcher_coco.py  test.py  train.py
herdnet/utils/: utils.py
herdnet/visualization/: visualizer.py
marimo-nbs/: README.md  patcher-v2.py  tryout-faster-rcnn.py
modelos/: README.md
notebooks/: collect-binary-metrics.ipynb  count-metrics-v2.ipynb  data-exploration-v2.ipynb  data-exploration.ipynb  data-explore-crowdedness.ipynb  data-preparation.ipynb  data-validation.ipynb  hard_negative_mining.ipynb  infer-metrics-v2.ipynb  infer-metrics.ipynb  measure-inference-times.ipynb  metrics_by_proximity.ipynb  patcher-v2.py  precision_recall_v2.ipynb  train-faster-rcnn.ipynb  train-herdnet.ipynb  tryout-faster-rcnn.py  upload-and-predict.ipynb  vitdet-hf.py
oficial_herdnet/: README.md
oficial_herdnet/configs/: config.yaml
oficial_herdnet/configs/test/: herdnet.yaml
oficial_herdnet/configs/train/: herdnet.yaml
oficial_herdnet/scripts/: csv_to_points.py  custom_train.yaml  custom_train.yml  custom_train_herdnet.py  train_herdnet.py
oficial_herdnet/tools/: csv_to_points.py  infer.py  patcher.py  test.py  train.py  view.py
test/e2e/: endpoints.py
tools/: add_info_to_model.py  csv2coco.py
vitdet/: train_hf.py
